Obnam NEWS
==========

This file summarizes changes between releases of Obnam.

Version 1.10, released UNRELEASED
--------------------------------

Minor new features:

* Lars Wirzenius added the `obnam list-formats` command to list all
  repository formats.

Minor fixes:

* `python setup.py build` no longer formats the manual page into plain
  text. This is now done in `python setup.py docs` instead. The latter
  is an optional build step, and probably only works on Debian.

Version 1.9, released 2015-03-22
--------------------------------

New features:

* James Vasile changed Obnam so it can backup an individual file,
  instead of an entire directory.

* James Vasile added the `--include` option to Obnam, allowing one to
  include files that would otherwise be excluded (see `--exclude`).

* Carlo Teubner changed `obnam fsck` to remove unused chunks, if the
  `--fsck-fix` or `--fsck-rm-unused` settings are used. He also made
  it not check for unused chunks when it's useless to do so, because
  of various `--fsck-skip` settings are used.

* A start of a French translation of the manual by pedrito2.

* Ian Cambell provided a new Obnam command, `obnam kdirstat`, which
  makes the KDE `k4dirstat` utility be able to show graphically which
  parts of a backup generation use most space.

* Lars Wirzenius added the `simple` repository format, which is for
  demonstration only. It is much too simplistic to be used for real.

Minor changes:

* The manual page and `obnam --help` are now clearer that the `--root`
  setting and command line arguments to `obnam backup` can be SFTP
  URLs. Thanks to Simone Piccardi for reporting the issue.

* David Fries filled in the displayed file permission mode bits.

* Grammar and typo fixes for the obnam.1 manual page, from Jean
  Jordaan.

* Tom Chiverton suggested a clarification to the manual page for
  "obnam mount" to say that each generation is a subdirectory.

* David Fries changed restore to set the group ownership if possible