@@ -44,9 +44,9 @@ class ObnamError(StructuredError):
     pass
 
 
-DEFAULT_NODE_SIZE = 256 * 1024 # benchmarked on 2011-09-01
-DEFAULT_CHUNK_SIZE = 1024 * 1024 # benchmarked on 2011-09-01
-DEFAULT_UPLOAD_QUEUE_SIZE = 128
+DEFAULT_NODE_SIZE = 256 * 1024  # benchmarked on 2011-09-01
+DEFAULT_CHUNK_SIZE = 1024 * 1024  # benchmarked on 2011-09-01
+DEFAULT_UPLOAD_QUEUE_SIZE = 1024  # benchmarked on 2015-05-02
 DEFAULT_LRU_SIZE = 256
 DEFAULT_CHUNKIDS_PER_GROUP = 1024
 DEFAULT_NAGIOS_WARN_AGE = '27h'
